--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.8"
-actix-files = "0.6"
+#actix-web = "4.8"
+#actix-files = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 stremio-core = { git = "https://github.com/Stremio/stremio-core.git" }
 url = "2.5"
-futures-util = "0.3"
+#futures-util = "0.3"
 serde_json = "1.0"
