--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,18 @@ name = "my-stremio-addon"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "build-msa"
+path = "src/build.rs"
+
+[[bin]]
+name = "serve"
+path = "src/serve.rs"
+
 [dependencies]
-#actix-web = "4.8"
-#actix-files = "0.6"
+actix-web = "4.8"
+actix-files = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 stremio-core = { git = "https://github.com/Stremio/stremio-core.git" }
 url = "2.5"
-#futures-util = "0.3"
 serde_json = "1.0"
